--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -212,3 +212,11 @@
   ;; - kill the whole line including its terminating newline, C-S-k
   (global-set-key (kbd "C-S-k") 'kill-whole-line)
 #+END_SRC
+* Lisp
+Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] package:
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle swiper)
+  (el-get-bundle lispy
+    (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1))))
+#+END_SRC
+** TODO Missing dependency lispy -> swiper 		     :bug:dependency:
