[vcs] Resolve conflicts during merge

--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1,3 +1,18 @@
+* Version control
+** Resolving conflicts
+For files with conflict markers, enable SMerge, a minor mode to
+quickly navigate between conflicts and choose which to keep:
+#+BEGIN_SRC emacs-lisp
+  (defun sm-try-smerge ()
+    (interactive)
+    (save-excursion
+      (goto-char (point-min))
+      (when (re-search-forward "^<<<<<<< " nil t)
+        (smerge-mode 1))))
+  (add-hook 'find-file-hook 'sm-try-smerge t)
+#+END_SRC
+*** TODO Describe default keybindings
+*** TODO Enable for files with complete conflict markers
 * Legacy configuration
 #+BEGIN_SRC emacs-lisp
   ;; yes-or-no -> y-or-n
@@ -160,17 +175,6 @@
        (tramp-set-completion-function "vcsh" '((tramp-parse-vcsh "")))
        )
     )
-
-  ;; enable SMerge, a minor mode to quickly navigate between conflicts and
-  ;; choose which to keep, for files with conflict markers
-  (defun sm-try-smerge ()
-    (interactive)
-    (save-excursion
-      (goto-char (point-min))
-      (when (re-search-forward "^<<<<<<< " nil t)
-        (smerge-mode 1))))
-  ;; smerge-mode will be enabled for files which contain conflict markers
-  (add-hook 'find-file-hook 'sm-try-smerge t)
 
   ; edit html files with nxml-mode
   (add-to-list 'auto-mode-alist '("\\.html$" . nxml-mode))
