--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -13,6 +13,17 @@ quickly navigate between conflicts and choose which to keep:
 #+END_SRC
 *** TODO Describe default keybindings
 *** TODO Enable for files with complete conflict markers
+* Package management
+** Bootstrapping el-get
+#+BEGIN_SRC emacs-lisp
+  (add-to-list 'load-path "~/.emacs.d/el-get/el-get")
+  (unless (require 'el-get nil 'noerror)
+    (with-current-buffer
+        (url-retrieve-synchronously
+         "https://raw.github.com/dimitri/el-get/master/el-get-install.el")
+      (goto-char (point-max))
+      (eval-print-last-sexp)))
+#+END_SRC
 * Legacy configuration
 #+BEGIN_SRC emacs-lisp
   ;; yes-or-no -> y-or-n
@@ -22,14 +33,6 @@ quickly navigate between conflicts and choose which to keep:
   (load custom-file t)
 
   (server-start)
-
-  (add-to-list 'load-path "~/.emacs.d/el-get/el-get")
-  (unless (require 'el-get nil 'noerror)
-    (with-current-buffer
-        (url-retrieve-synchronously
-         "https://raw.github.com/dimitri/el-get/master/el-get-install.el")
-      (goto-char (point-max))
-      (eval-print-last-sexp)))
 
   (add-to-list 'el-get-recipe-path "~/.emacs.d/el-get-user/recipes")
 
