--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1,3 +1,12 @@
+* Customization
+Emacs provies a convenient way to browse, change and save settings via
+=M-x customize=. By default, it saves these settings to an
+initialization file, =~/.emacs.d/init.el=. To keep initialization file
+clean and simple, save customizations to a separate file:
+#+BEGIN_SRC emacs-lisp
+  (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
+  (load custom-file t)
+#+END_SRC
 * Version control
 ** Resolving conflicts
 For files with conflict markers, enable SMerge, a minor mode to
@@ -28,9 +37,6 @@ quickly navigate between conflicts and choose which to keep:
 #+BEGIN_SRC emacs-lisp
   ;; yes-or-no -> y-or-n
   (fset 'yes-or-no-p 'y-or-n-p)
-
-  (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
-  (load custom-file t)
 
   (server-start)
 
