--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -81,31 +81,27 @@ quickly navigate between conflicts and choose which to keep:
           (:name puppet-flymake :pkgname "grimradical/puppet-flymake" :type github)
           ))
 #+END_SRC
-** Packages
+** Packages with default configration
 #+BEGIN_SRC emacs-lisp
-  (setq my:el-get-packages
-        '(el-get
-          linum-relative
-          command-frequency
-          crontab-mode
-          flymake-puppet
-          helm
-          magit
-          magit-view-file
-          nhexl-mode
-          org-link-travis
-          org-mode
-          puppet-mode
-          smex
-          ))
+  (dolist
+      (package
+       '(linum-relative
+         command-frequency
+         crontab-mode
+         flymake-puppet
+         helm
+         magit
+         magit-view-file
+         nhexl-mode
+         org-link-travis
+         org-mode
+         puppet-mode
+         smex)
+       (el-get-bundle package)))
 #+END_SRC
 ** Install and configure packages
 #+BEGIN_SRC emacs-lisp
-  (setq my:el-get-packages
-        (append my:el-get-packages
-                (mapcar #'el-get-source-name el-get-sources)))
-
-  (el-get 'sync my:el-get-packages)
+  (el-get 'sync)
 #+END_SRC
 * Legacy configuration
 #+BEGIN_SRC emacs-lisp
