--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -15,6 +15,17 @@ By default, Emacs saves backup files (the files ending with =~=) in the current 
           (make-directory mn/backup-directory t))
   (setq backup-directory-alist `((".*" . ,mn/backup-directory)))
 #+END_SRC
+* Package management
+** Bootstrapping el-get
+#+BEGIN_SRC emacs-lisp
+  (add-to-list 'load-path "~/.emacs.d/el-get/el-get")
+  (unless (require 'el-get nil 'noerror)
+    (with-current-buffer
+        (url-retrieve-synchronously
+         "https://raw.github.com/dimitri/el-get/master/el-get-install.el")
+      (goto-char (point-max))
+      (eval-print-last-sexp)))
+#+END_SRC
 * Networking
 ** TODO Set proxies conditionally
 * Version control
@@ -32,18 +43,7 @@ quickly navigate between conflicts and choose which to keep:
 #+END_SRC
 *** TODO Describe default keybindings
 *** TODO Enable for files with complete conflict markers
-* Package management
-** Bootstrapping el-get
-#+BEGIN_SRC emacs-lisp
-  (add-to-list 'load-path "~/.emacs.d/el-get/el-get")
-  (unless (require 'el-get nil 'noerror)
-    (with-current-buffer
-        (url-retrieve-synchronously
-         "https://raw.github.com/dimitri/el-get/master/el-get-install.el")
-      (goto-char (point-max))
-      (eval-print-last-sexp)))
-#+END_SRC
-** Local recipes
+* Install other packages
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle smex ;; a smart M-x enhancement
     :after (progn
