--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -36,6 +36,26 @@ By default, Emacs saves backup files (the files ending with =~=) in the current 
              (global-set-key (kbd "C-x C-z") 'magit-status)))
   (el-get-bundle magit-view-file)
 #+END_SRC
+** Integrate Vcsh and Magit
+   - open directory '/vcsh:<repo>:.
+   - =M-x magit-status=
+#+BEGIN_SRC emacs-lisp
+  (eval-after-load "tramp"
+    '(progn
+       (add-to-list 'tramp-methods '("vcsh"
+                                     (tramp-login-program "vcsh")
+                                     (tramp-login-args
+                                      (("enter")
+                                       ("%h")))
+                                     (tramp-remote-shell "/bin/sh")
+                                     (tramp-remote-shell-args
+                                      ("-c"))))
+
+       (defun tramp-parse-vcsh (_ignore)
+         "List all repositories"
+         (mapcar (lambda (x) (list nil x)) (split-string (shell-command-to-string "vcsh list"))))
+       (tramp-set-completion-function "vcsh" '((tramp-parse-vcsh "")))))
+#+END_SRC
 ** Resolving conflicts
 For files with conflict markers, enable SMerge, a minor mode to
 quickly navigate between conflicts and choose which to keep:
@@ -190,27 +210,6 @@ quickly navigate between conflicts and choose which to keep:
 
        (add-hook 'find-file-hooks 'mn-sudo-mode-line-function)
        (add-hook 'dired-mode-hook 'mn-sudo-mode-line-function)
-       )
-    )
-
-  ;; integrate vcsh and magit
-  ;; - open directory '/vcsh:<repo>:.'
-  ;; - M-x magit-status
-  (eval-after-load "tramp"
-    '(progn
-       (add-to-list 'tramp-methods '("vcsh"
-                                     (tramp-login-program "vcsh")
-                                     (tramp-login-args
-                                      (("enter")
-                                       ("%h")))
-                                     (tramp-remote-shell "/bin/sh")
-                                     (tramp-remote-shell-args
-                                      ("-c"))))
-
-       (defun tramp-parse-vcsh (_ignore)
-         "List all repositories"
-         (mapcar (lambda (x) (list nil x)) (split-string (shell-command-to-string "vcsh list"))))
-       (tramp-set-completion-function "vcsh" '((tramp-parse-vcsh "")))
        )
     )
 
