--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -52,8 +52,7 @@ And finally enable desktop mode:
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle magit
     :checkout "2.1.0"
-    :after (progn
-             (global-set-key (kbd "C-x C-z") 'magit-status)))
+    (global-set-key (kbd "C-x C-z") 'magit-status))
   (el-get-bundle magit-view-file)
 #+END_SRC
 *** TODO Is magit-revert-buffers broken? 			:bug:
