--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -254,6 +254,50 @@ quickly navigate between conflicts and choose which to keep:
    - [[github:grimradical/puppet-flymake]]
    - [[github:benprew/flymake-puppet]]
    Both =(provide 'flymake-puppet)=, use [[https://rubygems.org/gems/puppet-lint][puppet-lint]] and are based on Steve Purcell's [[github:purcell/flymake-coffee][flymake-coffe]]. For now, let use [[github:benprew/flymake-puppet]].
+* Working with files
+** Open files as another user
+#+BEGIN_SRC emacs-lisp
+  (eval-after-load "tramp"
+    '(progn
+       (defun mn-sudo-mode-line-function ()
+         (when (string-match "^/su\\(do\\)?:" default-directory)
+           (setq mode-line-format
+                 (format-mode-line mode-line-format
+                                   'font-lock-warning-face))))
+
+       (defvar sudo-tramp-prefix
+         "/sudo:"
+         (concat "Prefix to be used by sudo commands when building tramp path "))
+
+       (defun sudo-file-name (filename)
+         (set 'splitname (split-string filename ":"))
+         (if (> (length splitname) 1)
+             (progn (set 'final-split (cdr splitname))
+                    (set 'sudo-tramp-prefix "/sudo:"))
+           (progn (set 'final-split splitname)
+                  (set 'sudo-tramp-prefix (concat sudo-tramp-prefix "root@localhost:"))))
+         (set 'final-fn (concat sudo-tramp-prefix (mapconcat (lambda (e) e) final-split ":")))
+         (message "splitname is %s" splitname)
+         (message "sudo-tramp-prefix is %s" sudo-tramp-prefix)
+         (message "final-split is %s" final-split)
+         (message "final-fn is %s" final-fn)
+         (message "%s" final-fn))
+
+       (defun sudo-reopen-file ()
+         "Reopen file as root by prefixing its name with sudo-tramp-prefix and by clearing buffer-read-only"
+         (interactive)
+         (let*
+             ((file-name (expand-file-name buffer-file-name))
+              (sudo-name (sudo-file-name file-name)))
+           (progn
+             (setq buffer-file-name sudo-name)
+             (rename-buffer sudo-name)
+             (setq buffer-read-only nil)
+             (message (concat "File name set to " sudo-name)))))
+
+       (add-hook 'find-file-hooks 'mn-sudo-mode-line-function)
+       (add-hook 'dired-mode-hook 'mn-sudo-mode-line-function)))
+#+END_SRC
 * Org
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle org-mode
@@ -329,50 +373,7 @@ Another option is [[github:kuanyui/copy-as-org-mode]] which allows to copy the c
   (global-set-key (kbd "C-+") 'text-scale-increase)
   (global-set-key (kbd "C--") 'text-scale-decrease)
 
-  (eval-after-load "tramp"
-    '(progn
-       (defun mn-sudo-mode-line-function ()
-         (when (string-match "^/su\\(do\\)?:" default-directory)
-           (setq mode-line-format
-                 (format-mode-line mode-line-format
-                                   'font-lock-warning-face))))
-
-       (defvar sudo-tramp-prefix
-         "/sudo:"
-         (concat "Prefix to be used by sudo commands when building tramp path "))
-
-       (defun sudo-file-name (filename)
-         (set 'splitname (split-string filename ":"))
-         (if (> (length splitname) 1)
-             (progn (set 'final-split (cdr splitname))
-                    (set 'sudo-tramp-prefix "/sudo:"))
-           (progn (set 'final-split splitname)
-                  (set 'sudo-tramp-prefix (concat sudo-tramp-prefix "root@localhost:"))))
-         (set 'final-fn (concat sudo-tramp-prefix (mapconcat (lambda (e) e) final-split ":")))
-         (message "splitname is %s" splitname)
-         (message "sudo-tramp-prefix is %s" sudo-tramp-prefix)
-         (message "final-split is %s" final-split)
-         (message "final-fn is %s" final-fn)
-         (message "%s" final-fn))
-
-       (defun sudo-reopen-file ()
-         "Reopen file as root by prefixing its name with sudo-tramp-prefix and by clearing buffer-read-only"
-         (interactive)
-         (let*
-             ((file-name (expand-file-name buffer-file-name))
-              (sudo-name (sudo-file-name file-name)))
-           (progn
-             (setq buffer-file-name sudo-name)
-             (rename-buffer sudo-name)
-             (setq buffer-read-only nil)
-             (message (concat "File name set to " sudo-name)))))
-
-       (add-hook 'find-file-hooks 'mn-sudo-mode-line-function)
-       (add-hook 'dired-mode-hook 'mn-sudo-mode-line-function)
-       )
-    )
-
-  ; edit html files with nxml-mode
+  ;; edit html files with nxml-mode
   (add-to-list 'auto-mode-alist '("\\.html$" . nxml-mode))
   (add-to-list 'auto-mode-alist '("\\.htm$" . nxml-mode))
   (add-to-list 'auto-mode-alist '("\\.xhtml$" . nxml-mode))
