--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -204,6 +204,19 @@ quickly navigate between conflicts and choose which to keep:
 #+END_SRC
 *** TODO Describe default keybindings
 *** TODO Enable for files with complete conflict markers
+** Integrate Magit and Gerrit Code Review
+[[https://www.gerritcodereview.com/][Google Gerrit]] provides web based code review and repository management for the Git version control system.
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle magit-gerrit)
+#+END_SRC
+*** TODO Configuration
+By default, will recognize Git repository as Gerrit one only when:
+- there is remote with name =origin=;
+- this remote's URL uses =SSH= scheme and port =29418=.
+
+In other words, will work with =ssh://user@git.eclipse.org:29418/equinox/rt.equinox.p2= out of the box. Working with non-anonymous HTTPS (like =https://user@git.eclipse.org/r/a/equinox/rt.equinox.p2=) will require setting =magit-gerrit-ssh-creds=. 
+
+Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/equinox/rt.equinox.p2=.
 * Install other packages
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle smex ;; a smart M-x enhancement
