--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -456,6 +456,7 @@ Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] p
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle swiper)
   (el-get-bundle lispy
+    :checkout "0.26.0"
     (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1))))
 #+END_SRC
 ** TODO Missing dependency lispy -> swiper 		     :bug:dependency:
